--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -11,7 +11,7 @@
             <h1>{{ ad.title }}</h1>
             <p>{{ ad.introduction }}</p>
             <p class="h2">
-                <strong>{{ ad.rooms }} chambre{% if ad.rooms > 1%}s{% endif %}</strong> pour <strong>{{ ad.price }}&euro;</strong> par nuit
+                <strong>{{ ad.rooms }} chambre{% if ad.rooms > 1 %}s{% endif %}</strong> pour <strong>{{ ad.price }}&euro;</strong> par nuit
             </p>
             <a href="#" class="btn btn-primary">Réserver</a>
         </div>
@@ -51,18 +51,24 @@
                 </div>
             </div>
             <div class="col">
-                <div class="row">
-                    <div class="col-4">
-                        <img src="http://placehold.it/64x64" alt="Avatar de Joseph">
+                {% set a = ad.author %}
+                
+                {% set url = path('user_show', {'slug': a.slug}) %}
+
+                <div class="row mb-3 align-items-center">
+                    <div class="col-3">
+                        <a href="{{ url }}">
+                            <img src="{{ a.picture }}" class="avatar avatar-medium" alt="Avatar de {{ a.fullName }}">
+                        </a>
                     </div>
                     <div class="col">
-                        <h3>Joseph Dupont</h3>
-                        <span class="badge badge-primary">3 annonces</span>
+                        <a href="{{ url }}">
+                            <h3>{{ a.fullName }}</h3>
+                        </a>
+                        <span class="badge badge-primary">{{ a.ads | length }} annonce{% if a.ads | length > 1 %}s{% endif %}</span>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum et placeat nulla, reiciendis voluptates blanditiis quis ipsum harum recusandae cum.</p>
-                <p>In aut culpa hic! Laboriosam ipsa, adipisci natus numquam dicta fugiat nihil blanditiis suscipit quidem cumque. Deserunt repudiandae praesentium dolorum!</p>
-                <p>Est nisi non explicabo nemo cupiditate soluta dolore quo aut illum quisquam, eaque placeat molestiae culpa ipsa quam adipisci dolores!</p>
+                {{ a.description | raw }}
             </div>
         </div>
     </div>
