--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -14,6 +14,10 @@
                 <strong>{{ ad.rooms }} chambre{% if ad.rooms > 1 %}s{% endif %}</strong> pour <strong>{{ ad.price }}&euro;</strong> par nuit
             </p>
             <a href="#" class="btn btn-primary">Réserver</a>
+            {% if app.user == ad.author %}
+                <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
+                <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger" onClick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {{ ad.title }} ?`)">Supprimer l'annonce</a>
+            {% endif %}
         </div>
     </div>
 
@@ -42,11 +46,11 @@
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
+                        <span class="sr-only">Précédent</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
+                        <span class="sr-only">Suivant</span>
                     </a>
                 </div>
             </div>
