--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,3 +32,7 @@ div.carousel-caption {
     max-width: 32px;
     max-height: 32px;
 }
+
+.datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
+    color: firebrick !important;
+}
