--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -13,7 +13,7 @@
             <p class="h2">
                 <strong>{{ ad.rooms }} chambre{% if ad.rooms > 1 %}s{% endif %}</strong> pour <strong>{{ ad.price }}&euro;</strong> par nuit
             </p>
-            <a href="#" class="btn btn-primary">Réserver</a>
+            <a href="{{ path('booking_create', {'slug': ad.slug}) }}" class="btn btn-primary">Réserver</a>
             {% if app.user == ad.author %}
                 <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
                 <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger" onClick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {{ ad.title }} ?`)">Supprimer l'annonce</a>
