Mise en place de l'administration

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -4,11 +4,23 @@
 
 {% block body %}
     <div class="container">
-        <h1>Modification du mot de passe</h1>
+        <h1 class="my-5">Modification du mot de passe</h1>
 
         {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-primary">Modifier le mot de passe</button>
+
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-secondary clearfix">
+                    {{ form_row(form.oldPassword) }}
+                    {{ form_row(form.newPassword) }}
+                    {{ form_row(form.confirmPassword) }}
+                    <button type="submit" class="btn btn-primary float-right">
+                        <i class="fas fa-check"></i>
+                        Modifier le mot de passe
+                    </button>
+                </div>
+            </div>
+        </div>
         {{ form_end(form) }}
 
     </div>
