--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -15,11 +15,11 @@
     </head>
     <body>
 
-        {% include "shared/header.html.twig" %}
+        {% include "admin/shared/header.html.twig" %}
 
         {% block body %}{% endblock %}
     
-        {% include "shared/footer.html.twig" %}
+        {% include "admin/shared/footer.html.twig" %}
 
         {# <script src="/js/jquery.min.js"></script>
         <script src="/js/popper.min.js"></script>
