--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -8,7 +8,7 @@
     {% set author = ad.author %}
 
     <div class="container">
-        <h1>Votre réservation (n°{{ booking.id }})</h1>
+        <h1 class="my-5">Votre réservation (n°{{ booking.id }})</h1>
 
         {% if app.request.query.get('withAlert') %}
             <div class="alert alert-success">
@@ -28,35 +28,35 @@
         {% endif %}
 
         <div class="row">
-            <div class="col">
-                <div class="alert alert-light">
+            <div class="col-md-6">
+                <div class="alert alert-secondary">
                     
                     <h2>Détails</h2>
                     
                     <dl class="row">
-                        <dt class="col-md-4">Numéro</dt>
-                        <dd class="col-md-8">{{ booking.id }}</dd>
-                        <dt class="col-md-4">Date d'arrivée</dt>
-                        <dd class="col-md-8">{{ booking.startDate | date('d/m/Y') }}</dd>
-                        <dt class="col-md-4">Date de départ</dt>
-                        <dd class="col-md-8">{{ booking.endDate | date('d/m/Y') }}</dd>
-                        <dt class="col-md-4">Nombre de nuit</dt>
-                        <dd class="col-md-8">{{ booking.getDuration }}</dd>
-                        <dt class="col-md-4">Montant total</dt>
-                        <dd class="col-md-8">{{ booking.amount }}&euro;</dd>
-                        <dt class="col-md-4">Commentaire</dt>
-                        <dd class="col-md-8">{{ booking.comment }}</dd>
+                        <dt class="col-6">Numéro</dt>
+                        <dd class="col-6">{{ booking.id }}</dd>
+                        <dt class="col-6">Date d'arrivée</dt>
+                        <dd class="col-6">{{ booking.startDate | date('d/m/Y') }}</dd>
+                        <dt class="col-6">Date de départ</dt>
+                        <dd class="col-6">{{ booking.endDate | date('d/m/Y') }}</dd>
+                        <dt class="col-6">Nombre de nuit</dt>
+                        <dd class="col-6">{{ booking.getDuration }}</dd>
+                        <dt class="col-6">Montant total</dt>
+                        <dd class="col-6">{{ booking.amount | number_format(2, ',', ' ')}}&euro;</dd>
+                        <dt class="col-6">Commentaire</dt>
+                        <dd class="col-6">{{ booking.comment | default('Aucun commentaire')}}</dd>
                     </dl>
 
                     <hr>
 
                     <h2 class="alert-heading">Votre hôte</h2>
 
-                    <div class="row mb-3">
-                        <div class="col-3">
+                    <div class="row my-3">
+                        <div class="col-3 col-sm-3">
                             <img src="{{ author.picture }}" class="avatar avatar-medium" alt="Avatar de {{ author.fullName }}">
                         </div>
-                        <div class="col-9">
+                        <div class="col">
                             <h4>
                                 <a href="{{ path('user_show', {'slug': author.slug}) }}">{{ author.fullName }}</a>
                             </h4>
@@ -67,8 +67,28 @@
                     {{ author.description | raw }}
                     <a href="{{ path('user_show', {'slug': author.slug}) }}" class="btn btn-primary">Plus d'infos sur {{ author.firstName }}</a>
                 </div>
+                <div class="alert alert-secondary" id="comment">
+                    <h2 class="alert-heading">Votre avis compte !</h2>
+                    {% if date() > date(booking.endDate) %}
+                        {% set comment = booking.ad.commentFromAuthor(app.user) %}
+                        
+                        {% if comment is not null %}
+                            <blockquote>
+                                {{ comment.content }}
+                            </blockquote>
+                            <strong>Note : </strong> {% include "shared/rating.html.twig" with{'rating': comment.rating} %}
+                        {% else %}
+                            {{ form_start(form) }}
+                            {{ form_widget(form) }}
+                            <button type="submitt" class="btn btn-success">Confirmer !</button>
+                            {{ form_end(form) }}        
+                        {% endif %}                        
+                    {% else %}
+                        <p>Vous ne pourrez pas noter cette annonce tant que votre voyage ne sera pas terminé !</p>        
+                    {% endif %}
+                </div>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <div class="alert alert-light">
                     <h2 class="alert-heading">Votre hébergement</h2>
 
