--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,69 @@
+@media (max-width: 575.98px) { 
+    h4 {
+        font-size: 1.2em;
+    }
+    h2 {
+        font-size: 1.5em;
+    }
+    h1, .h1, h1.display-3{
+        font-size: 2em;
+        font-weight: 500;
+    }
+    h1.mobile{
+        font-size: 1.8em;
+        font-weight: 500;
+    }
+
+    .avatar {
+        max-width: 70px;
+        max-height: 70px;
+        border-radius: 50%;
+    }
+    .avatar-medium {
+        max-width: 48px;
+        max-height: 48px;
+    }
+    .avatar-mini {
+        max-width: 32px;
+        max-height: 32px;
+    }
+    .avatar-micro {
+        max-width: 24px;
+        max-height: 24px;
+    }
+
+    .btn {
+        text-transform: none;
+    }
+
+    .col.mobile {
+        text-align: center;
+    }
+}
+
+@media (min-width: 576px) {
+    .avatar {
+        max-width: 128px;
+        max-height: 128px;
+        border-radius: 50%;
+    }
+
+    .avatar-medium {
+        max-width: 64px;
+        max-height: 64px;
+    }
+
+    .avatar-mini {
+        max-width: 32px;
+        max-height: 32px;
+    }
+
+    .avatar-micro {
+        max-width: 24px;
+        max-height: 24px;
+    }
+}
+
 div.container {
     margin-top: 20px;
 }
@@ -13,26 +79,32 @@ div.ad-title h1, div.ad-title p {
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
+div.ad-title .btn {
+    margin-top: 2em;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+
 div.carousel-caption {
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
-.avatar {
-    max-width: 128px;
-    max-height: 128px;
-    border-radius: 50%;
-}
-
-.avatar-medium {
-    max-width: 64px;
-    max-height: 64px;
-}
-
-.avatar-mini {
-    max-width: 32px;
-    max-height: 32px;
-}
-
 .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
     color: firebrick !important;
+}
+
+span.rating i {
+    color: goldenrod;
+}
+
+.alert a {
+    text-decoration: none;
+}
+
+.alert .btn {
+    color: white;
+}
+
+.badge-admin {
+    font-size: 1.2em;
 }
