--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -5,10 +5,10 @@
 {% block body %}
     <div class="container">
 
-    <div class="row">
+    <div class="row my-5">
         <div class="col-md-3">&nbsp;</div>
         <div class="col-md-6">
-            <div class="bg-light py-3 px-3">
+            <div class="bg-light border border-secondary py-3 px-3">
                 <h1>Connectez vous !</h1>
 
                 {% if hasError %}
@@ -21,12 +21,18 @@
                         <label for="email">Email</label>
                         <input type="text" name="_username" id="email" class="form-control" placeholder="Adresse email..." required value="{{ username }}">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mb-5">
                         <label for="password">Mot de passe</label>
                         <input type="password" name="_password" id="password" class="form-control" placeholder="Mot de passe..." required>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success">Connexion !</button>
+                        <button type="submit" class="btn btn-success btn-block">Connexion</button>
+                    </div>
+                        <button type="submit" class="btn btn-primary btn-block">Inscription</button>
+                    <div class="form-group">
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn-link">Mot de passe oublié?</button>
                     </div>
                 </form>
             </div>
