--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -1,10 +1,14 @@
 {% set url = path('ads_show', {'slug': ad.slug}) %}
 
 <div class="col-md-4">
-    <div class="card bd-light mb-3">
+    <div class="card bd-secondary mb-3">
         <div class="card-header text-center">
-            {{ ad.rooms }} chambre{% if ad.rooms > 1%}s{% endif %}, <strong>{{ ad.price }}&euro; / nuit</strong> <br>
-            <small>Pas encore noté</small>
+            {{ ad.rooms }} chambre{% if ad.rooms > 1%}s{% endif %}, <strong>{{ ad.price | number_format(2, ',', ' ')}}&euro; / nuit</strong> <br>
+            {% if ad.comments | length > 0 %}
+                {% include "shared/rating.html.twig" with{'rating': ad.avgRatings} %}            
+            {% else %}
+                <small>Pas encore noté</small>
+            {% endif %}
         </div>
 
         <a href="{{ url }}">
@@ -20,7 +24,7 @@
             <p class="card-text">
                 {{ ad.introduction }}
             </p>
-            <a href="{{ url }}" class="btn btn-secondary">En savoir plus!</a>
+            <a href="{{ url }}" class="btn btn-primary float-right">En savoir plus!</a>
             {% if app.user == ad.author %}
                 <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
             {% endif %}
