--- a/templates/ad/_collection.html.twig
+++ b/templates/ad/_collection.html.twig
@@ -6,7 +6,10 @@
     <input type="hidden" id="widgets-counter" value="0">
 
     <div class="form-group">
-        <button type="button" id="add-image" class="btn btn-primary">Ajouter une image</button>
+        <button type="button" id="add-image" class="btn btn-primary">
+            <i class="fas fa-plus"></i>
+            Ajouter une image
+        </button>
     </div>
 {% endblock %}
 
@@ -17,7 +20,7 @@
 {% block _annonce_images_entry_widget %}
     <div class="form-group" id="block_{{ id }}">
         <div class="row">
-            <div class="col-10">
+            <div class="col">
                 <div class="row">
                     <div class="col">
                         {{ form_widget(form.url) }}
@@ -28,7 +31,9 @@
                         {{ form_errors(form.caption) }}
                     </div>
                     <div class="col-2">
-                        <button type="button" data-action="delete" data-target="#block_{{ id }}" class="btn btn-danger">X</button>
+                        <button type="button" data-action="delete" data-target="#block_{{ id }}" class="btn btn-danger">
+                            <i class="fas fa-trash"></i>
+                        </button>
                     </div>
                 </div>
             </div>
