--- a/templates/ad/edit.html.twig
+++ b/templates/ad/edit.html.twig
@@ -7,13 +7,45 @@
 {% block body %}
     <div class="container">
     
-        <h1>Modifier l'annonce : {{ ad.title }}</h1>
+        <h1 class="mb-3">Modifier l'annonce : <em>{{ ad.title }}</em></h1>
 
         {{ form_start(form) }}
 
-        {{ form_widget(form) }}
+        <div class="row">
+            <div class="col-md-6">
+                <div class="alert alert-secondary">
+                    <h2>Informations générales</h2>
+                    <hr>
+                    {{ form_row(form.title) }}
+                    {{ form_row(form.slug) }}
+                    {{ form_row(form.price) }}
+                    {{ form_row(form.rooms) }}
+                </div>
+                <div class="alert alert-secondary">
+                    <h2>Détails de l'annonce</h2>
+                    <hr>
+                    {{ form_row(form.introduction) }}
+                    {{ form_row(form.content) }}
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="alert alert-secondary">
+                    <h2>Images de l'annonce</h2>
+                    <hr>
+                    {{ form_row(form.coverImage) }}
+                    {{ form_row(form.images) }}
+                </div>
+            </div>
+        </div>
 
-        <button class="btn btn-primary">Enregistrer les modifictions</button>
+        <div class="alert alert-success clearfix">
+            <h2 class="alert-heading">Sauvegarder mon annonce</h2>
+            <p>Vous avez terminé de modifier votre annonce, félicitation !</p>
+            <button class="btn btn-primary float-right">
+                <i class="fas fa-check"></i>
+                Enregistrer les modifictions
+            </button>
+        </div>
 
         {{ form_end(form) }}
 
