--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="container">
-        <div class="jumbotron mt-3">
+        <div class="jumbotron my-5">
             <h1 class="display-3">Bienvenue sur SymBNB !</h1>
             <p class="lead">Nous mettons en relations les voyageurs et les propriétaires qui veulent profiter d'opportunité et gagner de l'argent en proposant leur bien à la location !</p>
             <hr class="my-4">
@@ -16,7 +16,7 @@
             </p>
         </div>
 
-        <h2 class="h1 mt-4 mb-3">Nos appartement stars</h2>
+        <h2 class="h1 my-5">Nos appartement stars</h2>
 
         <div class="row">
             <div class="col-md-4">
@@ -84,7 +84,7 @@
             </div>
         </div>
 
-        <h2 class="h1 mt-4 mb-3">Nos propriétaire stars</h2>
+        <h2 class="h1 my-5">Nos propriétaire stars</h2>
 
         <div class="row">
             <div class="col">
