--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -5,17 +5,17 @@
 {% block body %}
 
     <div class="container">
-        <div class="row align-items-center">
-            <div class="col-3 text-center">
+        <div class="row align-items-center mb-5">
+            <div class="col-4 col-sm-3 text-center">
                 <img src="{{ user.picture }}" class="avatar mb-3" alt="Avatar de {{ user.fullName }}">
                 <br>
                 <span class="badge badge-primary">{{ user.ads | length }} annonce{% if user.ads | length > 1 %}s{% endif %}</span>
             </div>
-            <div class="col-9">
-                <h1>{{ user.fullName }}</h1>
+            <div class="col mobile">
+                <h1 class="mobile mt-3">{{ user.fullName }}</h1>
                 {% if user is same as(app.user) %}
                     <div class="mt-3">
-                        <a href="{{ path('account_profile') }}" class="btn btn-primary mr-2 mb-2">Modifier mes informations</a>
+                        <a href="{{ path('account_profile') }}" class="btn btn-primary mb-2">Modifier mes informations</a>
                         <a href="{{ path('account_password') }}" class="btn btn-primary mb-2">Modifier mon mot de passe</a>
                     </div>
                 {% endif %}
