Mise en place de la logique de pagination dans l'administration

--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -19,7 +19,7 @@
             </thead>
 
             <tbody>
-                {% for ad in ads %}      
+                {% for ad in pagination.data %}      
                     <tr>
                         <td>{{ ad.id }}</td>
                         <td>{{ ad.title }}</td>
@@ -48,5 +48,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        {{ pagination.display() }}
     </div>
 {% endblock %}
