--- a/templates/admin/comment/index.html.twig
+++ b/templates/admin/comment/index.html.twig
@@ -20,7 +20,7 @@
             </thead>
 
             <tbody>
-                {% for comment in comments %}      
+                {% for comment in pagination.data %}      
                     <tr>
                         <td>{{ comment.id }}</td>
                         <td>{{ comment.createdAt | date('d/m/Y H:i') }}</td>
@@ -38,5 +38,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        {{ pagination.display() }}
     </div>
 {% endblock %}
