--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -13,11 +13,19 @@
             <p class="h2">
                 <strong>{{ ad.rooms }} chambre{% if ad.rooms > 1 %}s{% endif %}</strong> pour <strong>{{ ad.price | number_format(2, ',', ' ')}}&euro;</strong> par nuit
             </p>
-            <a href="{{ path('booking_create', {'slug': ad.slug}) }}" class="btn btn-primary">Réserver</a>
-            {% if app.user == ad.author %}
-                <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
-                <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger" onClick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {{ ad.title }} ?`)">Supprimer l'annonce</a>
-            {% endif %}
+            <div class="row mt-5">
+                <div class="col-md-4 text-center">
+                    <a href="{{ path('booking_create', {'slug': ad.slug}) }}" class="btn btn-primary btn-sm btn-block mb-2">Réserver</a>
+                </div>
+                {% if app.user == ad.author %}
+                    <div class="col-md-4 text-center">
+                        <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary btn-sm btn-block mb-2">Modifier l'annonce</a>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger btn-sm btn-block mb-2" onClick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {{ ad.title }} ?`)">Supprimer l'annonce</a>
+                    </div>
+                {% endif %}
+            </div>
         </div>
     </div>
 
@@ -59,7 +67,7 @@
                 {% if ad.comments | length > 0 %}
                     <h2 class="mb-3">Commentaires de nos voyageurs :</h2>
 
-                    <div class="alert alert-info">
+                    <div class="alert alert-info mb-5">
                         <h4 class="alert-heading text-center">
                             <div class="row align-items-center">
                                 <div class="col-6">
@@ -97,7 +105,9 @@
                     {% endfor %}
                     <hr>
                 {% else %}
-                    <h2>Cette annonce n'a pas encore reçu de commentaires.</h2>
+                <div class="alert alert-info">
+                    <h3>Cette annonce n'a pas encore reçu de commentaires.</h3>
+                </div>
                 {% endif %}
                 
             </div>
