--- a/templates/admin/ad/edit.html.twig
+++ b/templates/admin/ad/edit.html.twig
@@ -132,5 +132,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="/js/ad.js"></script>
+    <script src="{{ asset('build/js/ad.js') }}"></script>
 {% endblock %}
