--- a/templates/admin/shared/header.html.twig
+++ b/templates/admin/shared/header.html.twig
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#{# {{ path('homepage') }} #}">
+                <a class="nav-link" href="{{ path('admin_dashboard') }}">
                     <i class="fas fa-chart-line"></i>
                     Dashboard
                 </a>
